<resources>
    <string name="app_name">CommunityBlog</string>
    <string name="sample_user_photo">Sample User Photo</string>
    <string name="user_full_name">Name</string>
    <string name="user_mail">Mail</string>
    <string name="user_password">Password</string>
    <string name="user_password_confirmation">Confirm Password</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_drawer_home_title">Home</string>
    <string name="nav_drawer_settings_title">Settings</string>
    <string name="nav_drawer_profile_title">Profile</string>
    <string name="nav_drawer_sign_out_title">Sign Out</string>
    <string name="fab_icon_style_content_description">Fab Ico Home</string>
    <string name="home_fragment">"Home Fragment"</string>
    <string name="profile_fragment">The user can add posts and comment on their posts as well as on the posts by other users. s without profile image get a default image. They have the same rights as the others.</string>
    <string name="settings_fragment">To be implemented. Just dummy navigation menu item for now.</string>
    <string name="popup_user_image_content_description">Popup User Image</string>
    <string name="popup_title">Title</string>
    <string name="popup_description">Description</string>
    <string name="popup_image_content_description">Popup Image</string>
    <string name="popup_add_post_content_description">Popup Add Post</string>
    <string name="row_post_image_content_description">Row Post Image</string>
    <string name="row_post_image_view_content_description">Black Gradient</string>
    <string name="row_post_title">Row Post Title</string>
    <string name="post_details_img_content_description">Post Details Image</string>
    <string name="post_details_title">Post Title</string>
    <string name="post_details_timestamp">Timestamp</string>
    <string name="timestamp_sample">26 May 2021</string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,rum eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="post_details_current_user_image_content_description">Current User Profile Image</string>
    <string name="post_details_write_comment">Write Comment</string>
    <string name="post_details_add_comment">Add</string>
    <string name="post_details_user_image_content_description">Post Details User Image</string>
    <string name="row_comment_user_img_content_description">User Image in Comment</string>
    <string name="row_comment_username">Comment Username</string>
    <string name="row_comment_content">Comment Content Here</string>
    <string name="row_comment_sample_timestamp">10:20</string>
    <string name="row_post_item_username">Username</string>
    <string name="row_post_item_by">By</string>
    <string name="post_details_by">By</string>
    <string name="post_details_username">Damiano David</string>
</resources>