<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PostDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/post_details_img"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:contentDescription="@string/post_details_img_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/post_details_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/post_details_title"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_details_img" />

        <View
            android:id="@+id/post_details_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#2e2e2e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_details_title" />

        <TextView
            android:id="@+id/post_details_date_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/post_details_timestamp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_details_view"
            tools:text="@string/timestamp_sample" />

        <TextView
            android:id="@+id/post_details_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/lorem_ipsum_text"
            android:textColor="#373737"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_details_date_name" />

        <ImageView
            android:id="@+id/post_details_current_user_img"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/post_details_current_user_image_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_details_description"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:hint="@string/post_details_write_comment"
            android:background="@drawable/edittext_button_style_rounded"
            android:id="@+id/post_details_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/post_details_current_user_img"
            app:layout_constraintStart_toEndOf="@+id/post_details_current_user_img"
            app:layout_constraintTop_toTopOf="@+id/post_details_current_user_img"
            android:autofillHints="" />

        <Button
            android:id="@+id/post_details_add_comment_btn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_button_style_rounded"
            android:text="@string/post_details_add_comment"
            app:layout_constraintBottom_toBottomOf="@+id/post_details_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/post_details_comment"
            app:layout_constraintTop_toTopOf="@+id/post_details_comment"
            app:layout_constraintVertical_bias="0.529" />

        <ImageView
            android:id="@+id/post_details_user_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/post_details_user_image_content_description"
            app:layout_constraintBottom_toBottomOf="@+id/post_details_date_name"
            app:layout_constraintStart_toEndOf="@+id/post_details_date_name"
            app:layout_constraintTop_toTopOf="@+id/post_details_date_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_details_comment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>