<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/regUserPhoto"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/sample_user_photo"
        app:layout_constraintBottom_toTopOf="@+id/regName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364"
        app:srcCompat="@drawable/userphoto" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

    <EditText
        android:id="@+id/regName"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autofillHints="@string/user_full_name"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/user_full_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/regMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regMail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:autofillHints="@string/user_mail"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/user_mail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/user_password"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regMail" />

    <EditText
        android:id="@+id/regPassword2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/user_password_confirmation"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/user_password_confirmation"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/reg_btn_style"
        android:text="@string/register_button_text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword2" />

    <ProgressBar
        android:id="@+id/regProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/regBtn"
        app:layout_constraintEnd_toEndOf="@+id/regBtn"
        app:layout_constraintStart_toStartOf="@+id/regBtn"
        app:layout_constraintTop_toTopOf="@+id/regBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>