<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <ImageView
        android:id="@+id/row_post_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/row_post_image_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/row_post_image_view"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:contentDescription="@string/row_post_image_view_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/row_post_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/black_gradient" />

    <TextView
        android:id="@+id/row_post_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/row_post_title"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/row_post_profile_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/row_post_image_view" />

    <ImageView
        android:id="@+id/row_post_profile_img"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/row_post_image_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/row_post_image_view"
        app:layout_constraintTop_toTopOf="@+id/row_post_image_view"
        app:layout_constraintVertical_bias="0.619"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/row_post_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="8dp"
        android:textColor="#FFFFFF"
        android:text="@string/row_post_item_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/row_post_profile_img"
        app:layout_constraintTop_toTopOf="@+id/row_post_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/row_post_item_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:text="@string/row_post_item_by"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/row_post_username"
        app:layout_constraintTop_toTopOf="@+id/row_post_image"
        app:layout_constraintVertical_bias="0.064" />

</androidx.constraintlayout.widget.ConstraintLayout>