<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:background="#FFFFFF">


    <ImageView
        android:id="@+id/login_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/sample_user_photo"
        app:layout_constraintBottom_toTopOf="@+id/login_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/userphoto" />

    <EditText
        android:id="@+id/login_mail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autofillHints="@string/user_mail"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/user_mail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="351dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/user_password"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_btn_style"
        android:text="@string/login_button_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.466" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toTopOf="@+id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>